# mkdoc-test

./: pyproject.toml
docs/: index.md
mkdoc_test/: __init__.py  module.py
