[tool.poetry]
name = "mkdoc-test"
version = "0.1.0"
description = ""
authors = ["Jordan Bartos <jordankbartos@gmail.com>"]
readme = "README.md"
packages = [{include = "mkdoc_test"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mkdocs = "1.3.1"
mkdocstrings = "0.19.0"
mkdocstrings-python = "0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
